--- a/package.json
+++ b/package.json
@@ -49,20 +49,21 @@
   },
   "homepage": "https://github.com/bantoinese83/gemini-nexus#readme",
   "dependencies": {
+    "@google/genai": "^0.14.1",
     "@google/generative-ai": "^0.24.1",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.4.5",
     "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
